v1.1.0
  ### ATTENTION!!! breaking change: ###
- JSON function: use '{' key suffix to start embedded document (instead of value '[')
- IJSONDocument.ToString re-done using IJSONEnumerator
- IJSONDocWithReUse to fix re-using pre-allocated keys

v1.0.5
- IJSONDocument.Delete

v1.0.4
- JsonEnum: return 'empty' enumerator on nil/Null

v1.0.3
- jsonV: improved variant type display
- jsonV: Ctrl+Shift+C to copy value only
- jsonDoc: fixed issue with int64 arrays

v1.0.2
- jsonV: support array as root
- jsonDoc: const OleVariant arguments
- jsonEnum: with Data=nil 'fail silently' (EOF=true Next=false)

v1.0.1
- IJSONEnumerator
- IJSONDocArrayBuilder

v1.0.0